# password-manager

./: .gitignore  README.md  pyproject.toml
src/: config.py  crypto.py  db.py  main.py
